Improved animations and fixed spacing for fighters and fighterstats

--- a/static/styles/animations.css
+++ b/static/styles/animations.css
@@ -2,133 +2,177 @@ svg {
 	width: 250px;
 	height: auto;
 }
+
 ul {
 	overflow-anchor: auto;
 }
+
 .animate-bounce {
 	animation: bounce 1s infinite;
 }
+
 @keyframes bounce {
-	0%, 100% {
-		transform: translateY(-25%);
+
+	0%,
+	100% {
+		transform: translateY(-15%);
 		animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
 	}
+
 	50% {
 		transform: none;
 		animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
 	}
 }
+
 .animate-wounded {
 	animation: bounce 1s infinite, pulse 1s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
+
 @keyframes pulse {
 	50% {
 		opacity: 0.5;
 	}
 }
+
 .animate-attack-left {
 	animation-name: "attackleft";
 	animation-duration: 1s;
 	animation-iteration-count: 1;
-	animation-timing-function: cubic-bezier(0.4,0,0.2,1);
+	animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 @keyframes attackleft {
-	0%,100% {
-		transform: translateX(0);
+
+	0%,
+	100% {
+		transform: translateX(0) rotateZ(0deg);
 	}
+
 	25% {
-		transform: translateX(-25px);
+		transform: translateX(-25%) translateY(-25%) rotateZ(-25deg);
 	}
+
 	50% {
-		transform: translateX(50px);
+		transform: translateX(75%) rotateZ(25deg);
 	}
 }
+
 .animate-attack-right {
 	animation-name: "attackright";
 	animation-duration: 1s;
 	animation-iteration-count: 1;
-	animation-timing-function: cubic-bezier(0.4,0,0.2,1);
+	animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 @keyframes attackright {
-	0%,100% {
-		transform: translateX(0);
+
+	0%,
+	100% {
+		transform: translateX(0) rotateZ(0deg);
 	}
+
 	25% {
-		transform: translateX(25px);
+		transform: translateX(25%) translateY(-25%) rotateZ(25deg);
 	}
+
 	50% {
-		transform: translateX(-50px);
+		transform: translateX(-75%) rotateZ(-25deg);
 	}
 }
+
 .animate-crit-left {
 	animation-name: "critleft";
 	animation-duration: 1s;
 	animation-iteration-count: 1;
-	animation-timing-function: cubic-bezier(0.4,0,0.2,1);
+	animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 @keyframes critleft {
-	0%,100% {
-		transform: translateX(0);
+
+	0%,
+	100% {
+		transform: translateX(0) rotateZ(0deg);
 	}
-	25% {
-		transform: translateX(-50px);
-	}
+
 	50% {
-		transform: translateX(100px);
+		transform: translateX(-50%) translateY(-50%) rotateZ(-45deg);
+	}
+
+	75% {
+		transform: translateX(100%) rotateZ(45deg);
 	}
 }
+
 .animate-crit-right {
 	animation-name: "critright";
 	animation-duration: 1s;
 	animation-iteration-count: 1;
-	animation-timing-function: cubic-bezier(0.4,0,0.2,1);
+	animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 @keyframes critright {
-	0%,100% {
-		transform: translateX(0);
+
+	0%,
+	100% {
+		transform: translateX(0) rotateZ(0deg);
 	}
-	25% {
-		transform: translateX(50px);
-	}
+
 	50% {
-		transform: translateX(100px);
+		transform: translateX(50%) translateY(-25%) rotateZ(45deg);
+	}
+
+	75% {
+		transform: translateX(-100%) rotateZ(-45deg);
 	}
 }
+
 .animate-defend-left {
 	animation-name: "defendleft";
 	animation-duration: 2s;
 	animation-iteration-count: 1;
-	animation-timing-function: cubic-bezier(0.4,0,0.2,1);
+	animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 @keyframes defendleft {
-	0%,100% {
+
+	0%,
+	100% {
 		transform: translateX(0);
 		transform: translateY(0);
 	}
+
 	25% {
 		transform: translateX(-40px);
 		transform: translateY(-50px);
 	}
+
 	50% {
 		transform: translateX(-20px);
 		transform: translateY(-30px);
 	}
 }
+
 .animate-defend-right {
 	animation-name: "defendright";
 	animation-duration: 2s;
 	animation-iteration-count: 1;
-	animation-timing-function: cubic-bezier(0.4,0,0.2,1);
+	animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 @keyframes defendright {
-	0%, 100% {
+
+	0%,
+	100% {
 		transform: translateX(0);
 		transform: translateY(0);
 	}
+
 	25% {
 		transform: translateX(40px);
 		transform: translateY(50px);
 	}
+
 	50% {
 		transform: translateX(20px);
 		transform: translateY(30px);
